# bio-inf-project

./: .gitignore  AbstractGraphBuildStrategy.h  AbstractGraphGoThroughStrategy.h  CMakeLists.txt  Define.h  Element.cpp  Element.h  HashGraphBuild.cpp  HashGraphBuild.h  StandardGraphBuild.cpp  StandardGraphBuild.h  StandardGraphGoThrough.cpp  StandardGraphGoThrough.h  analyze_output.ipynb  main.cpp  solver.cpp  solver.h
